# keep_awake

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml
docs/: design.md  requirements.md  tech-selection.md
go/: autostart.go  config.go  go.mod  icon.go  inhibit.go  inhibit_linux.go  inhibit_macos.go  inhibit_windows.go  lang.go  main.go  mouse.go  mouse_other.go  mouse_windows.go  notify.go  platform.go  single_instance.go  single_instance_stub.go  tray.go  winapi_common.go
rust/: Cargo.toml
rust/src/: inhibit.rs  lang.rs  main.rs  mouse.rs  tray.rs
src/: config.rs  lang.rs  main.rs  tray.rs
