[package]
name = "keep-awake"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
tray-icon = "0.19"
enigo = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_System_Power",
    "Win32_System_Registry",
    "Win32_Foundation",
]}

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = "5"

[target.'cfg(windows)'.build-dependencies]
ico = "0.3"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
